# eeo-analyzer

./: .gitignore  Cargo.toml  README.md
desktop/: Cargo.toml  Dioxus.toml  README.md  package-lock.json  tailwind.config.js
desktop/public/: tailwind.css
desktop/src/: main.rs
desktop/src/models/: mod.rs
dns/: Cargo.toml
dns/examples/: test.rs  usage.rs
dns/src/: lib.rs
downloader/: Cargo.toml
downloader/examples/: usage.rs
downloader/src/: lib.rs
ttfb/: Cargo.toml  README.md
ttfb/examples/: usage.rs
