[package]
name = "dns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
trust-dns-resolver = { workspace = true }
reqwest = { workspace = true }
hyper = "0.14.27"


[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
simplelog = { workspace = true }
time = { workspace = true }
