[package]
name = "ttfb"
version = "0.1.0"
edition = "2021"
description = "Time to First Byte"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ttfb"
required-features = ["bin"]

# Feature for all additional dependencies of the binary.
[features]
bin = ["clap", "crossterm"]

[dependencies]
# +++ LIBRARY +++

# DNS over systems default DNS resolver
trust-dns-resolver = { workspace = true, features = ["dns-over-rustls"] }
# TLS handshake
native-tls = "0.2"
# automatic Display impl for enums
derive_more = { version = "0.99", default-features = false, features = [
    "display",
] }
# nice abstraction of URL
url = "2.2"
regex = "1.5"

# +++ BINARY +++
# used for the binary, not the lib
[dependencies.crossterm]
optional = true
version = "0.25"

# CLI args parsing
[dependencies.clap]
optional = true
version = "~4.1"
features = [
    "std",
    "color",
    "help",
    "usage",
    "error-context",
    "suggestions",
    "derive",
    "unicode",
    "wrap_help",
]

[dev-dependencies]
anyhow = { workspace = true }
simplelog = { workspace = true }
log = { workspace = true }
